<resources>
    <string name="app_name">DicodingStoryApp</string>
    <string name="signup">Sign Up</string>
    <string name="login">Log In</string>
    <string name="message_welcome_page">This is an application for the Dicoding Intermediate Android Course submission! Here, you can upload your story for the day!</string>
    <string name="title_welcome_page">Welcome, Everyone!!\nDicoding Story App!</string>
    <string name="title_signup_page">Complete your information below</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="message_login_page">Enter your information</string>
    <string name="title_login_page">What is your story today?</string>
    <string name="name">Name</string>
    <string name="logout">Log Out</string>
    <string name="story_image">Story Image</string>
    <string name="retry">Retry</string>
    <string name="add">Add Story</string>
    <string name="logout_confirmation">Confirm logout?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="no_story_available">No stories available</string>
    <string name="story_detail">Story Detail</string>
    <string name="gallery">Gallery</string>
    <string name="upload">Upload</string>
    <string name="camera">Camera</string>
    <string name="description">Description</string>
    <string name="app_widget_description">This is an app widget description</string>
    <string name="empty_text">NO DATA</string>
    <string name="story_list">Story List</string>
    <string name="add_story">Add Story</string>
    <string name="message_after_login">You successfully logged in. Ready to upload some story?</string>
    <string name="enter">Enter</string>
    <string name="login_failed">Login Failed</string>
    <string name="unvalid_email_format">Invalid email format</string>
    <string name="unvalid_email">Invalid email</string>
    <string name="reminder_valid_email">Make sure the email format is correct</string>
    <string name="password_min_8_char">Password must be at least 8 characters</string>
    <string name="unvalid_password">Invalid password</string>
    <string name="reminder_valid_password">Password must be at least 8 characters long and cannot contain spaces</string>
    <string name="upload_successful">Upload Successful</string>
    <string name="description_is_required">Description is required</string>
    <string name="email_cannot_empty">Email cannot be empty</string>
    <string name="name_cannot_empty">Name cannot be empty</string>
    <string name="password_cannot_empty">Password cannot be empty</string>
    <string name="password_cannot_contain_space">Password cannot contain spaces</string>
    <string name="name_not_valid">Invalid name</string>
    <string name="registration_failed">Registration Failed</string>
    <string name="account_cretaed_message">The account with %1$s has been created. Let’s log in and upload some stories.</string>
    <string name="no_image_selected">No image selected</string>
    <string name="an_error_occurred">An error occurred</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="Maps">Maps</string>
    <string name="normal_type">Normal</string>
    <string name="satellite_type">Satellite</string>
    <string name="terrain_type">Terrain</string>
    <string name="hybrid_type">Hybrid</string>
    <string name="share_location">share location</string>
    <string name="location_permission_denied">Location permission denied</string>
    <string name="location_added">Location added successfully</string>
    <string name="location_not_found">Could not retrieve location</string>
    <string name="location_error">Error getting location</string>
    <string name="unknown_error">unknown error</string>
</resources>
